--- a/application7/src/client/www/css/app.css
+++ b/application7/src/client/www/css/app.css
@@ -23,7 +23,14 @@
   --f7-fab-label-border-radius: 4px;
   --f7-fab-label-padding: 4px 12px;
   --f7-fab-button-size: 40px;
+
+  --f7-searchbar-input-border-width: 0px;
+  --f7-searchbar-input-border-color: transparent;
+  --f7-searchbar-input-text-color: #000;
+  --f7-searchbar-placeholder-color: rgba(0, 0, 0, 0.4);
 }
+
+
 
 /* Your app custom styles here */
 
@@ -36,22 +43,22 @@
 
 @font-face {
   font-family: Poppins-Regular;
-  src: url('../fonts/poppins/Poppins-Regular.ttf'); 
+  src: url('../fonts/poppins/Poppins-Regular.ttf');
 }
 
 @font-face {
   font-family: Poppins-Medium;
-  src: url('../fonts/poppins/Poppins-Medium.ttf'); 
+  src: url('../fonts/poppins/Poppins-Medium.ttf');
 }
 
 @font-face {
   font-family: Poppins-Bold;
-  src: url('../fonts/poppins/Poppins-Bold.ttf'); 
+  src: url('../fonts/poppins/Poppins-Bold.ttf');
 }
 
 @font-face {
   font-family: Poppins-SemiBold;
-  src: url('../fonts/poppins/Poppins-SemiBold.ttf'); 
+  src: url('../fonts/poppins/Poppins-SemiBold.ttf');
 }
 
 @font-face{
@@ -65,8 +72,8 @@
 [ RESTYLE TAG ]*/
 
 * {
-	margin: 0px; 
-	padding: 0px; 
+	margin: 0px;
+	padding: 0px;
 	box-sizing: border-box;
 }
 
@@ -207,7 +214,7 @@ iframe {
 }
 
 .container-login100 {
-  width: 100%;  
+  width: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -218,7 +225,7 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background: #f2f2f2;  
+  background: #f2f2f2;
 }
 
 .wrap-login100 {
@@ -278,7 +285,7 @@ iframe {
   padding: 0 5px;
 }
 
-/*---------------------------------------------*/ 
+/*---------------------------------------------*/
 .focus-input100 {
   position: absolute;
   display: block;
@@ -544,6 +551,21 @@ iframe {
   }
 }
 
+.coordinates{
+  width:350px;
+}
+
+.coordinates .card-header{
+  background:	#fafafa;
+}
+
+.coordinates .card-footer {
+    background:#fafafa;
+}
+
+.map {
+  height : 900px;
+}
 
 /* Actions */
 ul.actions {
@@ -661,8 +683,25 @@ background-image: linear-gradient(rgba(17, 17, 17, 0.25), rgba(17, 17, 17, 0.25)
       
      
 
+.section-title {
+  margin-left: 40%;
+}
+.wrapper-button{
+  width: 25%;
+}
+#userFoundButton{
+  width: 100%;
+}
+#userFoundPseudo{
+  font-size: larger;
+}
 
 /* .demo-card-header-pic .card-header {
+
+  #content-requests .block-title h1{
+ font-size: small;
+}
+
   height: 40vw;
   background-size: cover;
   background-position: center;
@@ -711,12 +750,39 @@ background-image: linear-gradient(rgba(17, 17, 17, 0.25), rgba(17, 17, 17, 0.25)
   --f7-fab-extended-text-letter-spacing: 0.03em;
   --f7-fab-label-box-shadow: var(--f7-elevation-3);
   --f7-fab-label-font-size: inherit;
+
+  --f7-searchbar-border-color: transparent;
+  --f7-searchbar-height: 48px;
+  --f7-searchbar-inner-padding-left: 0px;
+  --f7-searchbar-inner-padding-right: 0px;
+  --f7-searchbar-link-color: #737373;
+  --f7-searchbar-search-icon-color: #737373;
+  --f7-searchbar-input-font-size: 20px;
+  --f7-searchbar-input-border-radius: 0px;
+  --f7-searchbar-input-height: 100%;
+  --f7-searchbar-input-padding-horizontal: 48px;
+  --f7-searchbar-inline-input-padding-horizontal: 24px;
+  --f7-searchbar-input-clear-button-color: #737373;
+  --f7-searchbar-backdrop-bg-color: rgba(0, 0, 0, 0.25);
+  --f7-searchbar-shadow-image: var(--f7-bars-shadow-bottom-image);
+  --f7-searchbar-in-page-content-margin: 8px;
+  --f7-searchbar-in-page-content-box-shadow: var(--f7-elevation-1);
+  --f7-searchbar-in-page-content-border-radius: 4px;
+  --f7-searchbar-in-page-content-input-border-radius: 4px;
+  --f7-searchbar-bg-color: #fff;
+  --f7-searchbar-input-bg-color: #fff;
 }
 .md .theme-dark,
 .md.theme-dark {
   --f7-tabbar-link-inactive-color: rgba(255, 255, 255, 0.54);
   --f7-popover-bg-color: #1c1c1d;
   --f7-popover-actions-label-text-color: rgba(255, 255, 255, 0.54);
+
+  --f7-searchbar-input-text-color: #fff;
+  --f7-searchbar-placeholder-color: rgba(255, 255, 255, 0.4);
+
+  --f7-searchbar-bg-color: #202020;
+  --f7-searchbar-input-bg-color: #202020;
 }
 .aurora {
   --f7-toolbar-height: 38px;
@@ -754,6 +820,38 @@ background-image: linear-gradient(rgba(17, 17, 17, 0.25), rgba(17, 17, 17, 0.25)
   --f7-fab-extended-text-letter-spacing: 0;
   --f7-fab-label-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
   --f7-fab-label-font-size: 12px;
+
+    --f7-button-font-size: 14px;
+  --f7-button-height: 28px;
+  --f7-button-min-width: 24px;
+  --f7-button-padding-horizontal: 10px;
+  --f7-button-border-radius: 4px;
+  --f7-button-font-weight: 500;
+  --f7-button-letter-spacing: 0.02;
+  --f7-button-text-transform: none;
+
+  --f7-searchbar-height: 38px;
+  --f7-searchbar-inner-padding-left: 8px;
+  --f7-searchbar-inner-padding-right: 8px;
+  /*
+  --f7-searchbar-link-color: var(--f7-bars-link-color, var(--f7-theme-color));
+  */
+  --f7-searchbar-input-font-size: 13px;
+  --f7-searchbar-input-border-radius: 4px;
+  --f7-searchbar-input-height: 24px;
+  --f7-searchbar-input-padding-horizontal: 24px;
+  /*
+  --f7-searchbar-inline-input-padding-horizontal: var(--f7-searchbar-input-padding-horizontal;
+  --f7-searchbar-input-clear-button-color: var(--f7-input-clear-button-color);
+  */
+  --f7-searchbar-backdrop-bg-color: rgba(0, 0, 0, 0.4);
+  --f7-searchbar-shadow-image: none;
+  --f7-searchbar-in-page-content-margin: 0px;
+  --f7-searchbar-in-page-content-box-shadow: none;
+  --f7-searchbar-in-page-content-border-radius: 0;
+
+  --f7-searchbar-search-icon-color: rgba(0, 0, 0, 0.4);
+  --f7-searchbar-input-bg-color: #fff;
   
 }
 .aurora .theme-dark,
@@ -761,4 +859,7 @@ background-image: linear-gradient(rgba(17, 17, 17, 0.25), rgba(17, 17, 17, 0.25)
   --f7-tabbar-link-inactive-color: rgba(255, 255, 255, 0.5);
   --f7-popover-bg-color: #1c1c1d;
   --f7-popover-actions-label-text-color: rgba(255, 255, 255, 0.6);
+
+  --f7-searchbar-input-bg-color: #333;
+  --f7-searchbar-search-icon-color: rgba(255, 255, 255, 0.4);
 }
